<resources>
    <string name="app_name">Find A Goalie</string>
    <string name="facebook_app_id">713303625847833</string>
    <string name="fb_login_protocol_scheme">fb713303625847833</string>
    <string name="action_sign_in_facebook">Sign in with Facebook</string>
    <string name="tv_profile_name">Profile Name</string>
    <string name="et_profile_name" />
    <string name="tv_profile_id">Profile ID</string>
    <string name="et_profile_id" />
    <string name="bt_logout">Sair</string>
    <string name="tv_titulo_perfil">Informações do Perfil</string>
    <string name="Nome">Nome</string>
    <string name="et_nome" />
    <string name="tv_idade">Idade (anos)</string>
    <string name="et_idade" />
    <string name="tv_posicao">Posição</string>
    <string name="rbt_goleiro">Goleiro</string>
    <string name="rbt_jogador">Jogador</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_sair">Sair</string>
    <string name="et_principal_idade" />
    <string name="et_principal_tipo_perfil" />
    <string name="tv_telefone">Telefone</string>
    <string name="et_telefone" />
    <string name="tv_email">E-mail</string>
    <string name="et_email" />
    <string name="tv_titulo_partidacad">Cadastrar Partida</string>
    <string name="tv_desc_partida">Descrição</string>
    <string name="et_desc_partida" />
    <string name="tv_end_partida">Endereço</string>
    <string name="et_end_partida" />
    <string name="tv_latitude">Latitude (opcional)</string>
    <string name="et_latitude" />
    <string name="tv_longitude">Longitude (opcional)</string>
    <string name="et_longitude" />
    <string name="tv_data_partida">Data</string>
    <string name="tv_hora_partida">Hora</string>
    <string name="et_data_partida" />
    <string name="et_hora_partida" />
    <string name="btn_salvar_partida">Salvar</string>
    <string name="btn_limpar_partida">Limpar</string>
    <string name="btn_cadastrar_partida">Cadastrar Partida</string>
    <string name="btn_consultar_partida">Consultar Partida</string>
    <string name="btn_voltar_partidacad">Voltar</string>
    <string name="tv_titulo_partidacons">Detalhes da Partida</string>
    <string name="tv_desc_consulta">Descrição</string>
    <string name="tv_end_consulta">Endereço</string>
    <string name="et_desc_consulta" />
    <string name="et_end_consulta" />
    <string name="tv_lat_consulta">Latitude</string>
    <string name="et_lat_consulta" />
    <string name="tv_long_consulta">Longitude</string>
    <string name="et_long_consulta" />
    <string name="btn_mapa_partida">Ver Localização</string>
    <string name="tv_data_consulta">Data</string>
    <string name="et_data_consulta" />
    <string name="tv_hora_consulta">Hora</string>
    <string name="et_hora_consulta" />
    <string name="btn_voltar_partidacons">Voltar</string>
    <string name="tv_status_consulta">Status</string>
    <string name="et_status_consulta" />
    <string name="title_activity_maps">Map</string>
    <string name="btn_atender_partidacons">Atender</string>
    <string name="tv_titulo_partidaaprov">Aprovação</string>
    <string name="tv_desc_partidaaprov">Descrição</string>
    <string name="et_desc_partidaaprov" />
    <string name="tv_goleiro_partidaaprov">Goleiro que deseja comparecer</string>
    <string name="et_goleiro_partidaaprov" />
    <string name="btn_aprovar">Aprovar</string>
    <string name="btn_rejeitar">Rejeitar</string>
    <string name="tv_listar_partidas">Listar Partidas</string>
    <string name="btn_sair_principal">Sair</string>
    <string name="btn_editar_perfil">Editar Perfil</string>
    <string name="btn_listar_partidas">Listar Partidas</string>
    <string name="tv_titulo_listagens">Partidas</string>
    <string name="tv_list_pendentes">Pendentes</string>
    <string name="tv_list_aguardando">Aguardando Aprovação</string>
    <string name="tv_list_atendidas">Atendidas por Você</string>
    <string name="btn_informacoes">Ver Informações</string>
    <string name="tv_perfil_principal">Perfil</string>
    <string name="tv_principal_titulo">Find a Goalie</string>
    <string name="tv_partida_principal">Partida</string>
    <string name="btn_coord_partidacad">Seu Local</string>
</resources>
